examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__expressions__subscript@a1b2 3c4 5.snap
---
source: src/tests/corpus/expressions.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Subscript(
                                    Subscript {
                                        value: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        subscript: [
                                            Expression(
                                                PrimaryExpression(
                                                    Integer(
                                                        Integer {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Subscript(
                                    Subscript {
                                        value: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        subscript: [
                                            Expression(
                                                PrimaryExpression(
                                                    Integer(
                                                        Integer {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                            Expression(
                                                PrimaryExpression(
                                                    Integer(
                                                        Integer {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                Subscript(
                                    Subscript {
                                        value: Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                        subscript: [
                                            Expression(
                                                PrimaryExpression(
                                                    Integer(
                                                        Integer {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                            Expression(
                                                PrimaryExpression(
                                                    Integer(
                                                        Integer {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
